<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faultyForm"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_gravity="center"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="30sp"
        android:inputType="text"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textSize="30sp"
        android:inputType="text"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textSize="30sp"

        android:inputType="number"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gender:"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Male"
            android:textSize="20dp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Female"
            android:textSize="20dp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Other"
            android:textSize="20sp"
            />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hobbies:"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Football"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Cricket"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "Faculty:"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/st1"
        android:spinnerMode="dropdown"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Copyright"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_gravity="center"
        android:layout_marginTop="200sp"
        />

</LinearLayout>